# lunar-stack

./: .gitattributes  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/app/: app.dart  router.dart  theme.dart
lib/app/state/: project_draft.dart  project_draft.freezed.dart  project_draft_controller.dart
lib/core/domain/: astro_project.dart  astro_project.freezed.dart  frame_quality.dart  frame_quality.freezed.dart  processing_stage.dart  project_type.dart  stabilization_config.dart  stabilization_config.freezed.dart  stabilized_video_result.dart  stabilized_video_result.freezed.dart  stack_config.dart  stack_config.freezed.dart  stack_result.dart  stack_result.freezed.dart  video_metadata.dart  video_metadata.freezed.dart
lib/core/native/: astro_engine_bindings.dart  frame_extractor_channel.dart
lib/core/widgets/: astro_before_after_viewer.dart  astro_button.dart  astro_card.dart  astro_metric_chip.dart  astro_progress_card.dart  astro_quality_graph.dart  astro_warning_box.dart
lib/features/analysis/domain/: frame_selection_suggestion.dart
lib/features/analysis/presentation/: analysis_screen.dart
lib/features/flow_selection/presentation/: flow_selection_screen.dart
lib/features/history/application/: history_controller.dart
lib/features/history/domain/: history_entry.dart  (+2 more)
native/: CMakeLists.txt
native/engine/include/: astro_engine.h
native/engine/src/: engine.cpp
native/tools/: test_stack.cpp
test/: widget_test.dart
(+15 files in other folders)
